# low-vision-find-glasses-demo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apps/: benchmark.py  sim_demo.py  voice_sim_demo.py
configs/: app.yaml  cue_policy.yaml  objects_zh.yaml  sim_ai2thor.yaml
docs/: BENCHMARK.md  PHASE_1_SIMULATOR.md  PHASE_2_VISION.md  PHASE_3_DISTANCE_CUE.md  PHASE_4_DETECTOR.md  PHASE_5_VOICE.md  PROJECT_PLAN.md
lvfind/audio/: __init__.py  asr.py  tts.py  wakeword.py
lvfind/cue/: __init__.py  policy.py
lvfind/intent/: __init__.py  object_vocab.py  parser.py
lvfind/pipeline/: __init__.py  frame_bus.py  metrics.py
lvfind/sim/: __init__.py  ai2thor_adapter.py  base.py
lvfind/vision/: __init__.py  detector_base.py  direction.py  distance.py  yolo_detector.py
tests/: test_audio_interfaces.py  test_benchmark_app.py  test_cue_policy.py  test_detector_base.py  test_direction.py  test_distance.py  test_frame_bus.py  test_imports.py  test_intent_parser.py  test_metrics.py  test_object_vocab.py  test_voice_commands.py
